k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expressjs-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: expressjs-api
  template:
    metadata:
      labels:
        app: expressjs-api
    spec:
      containers:
        - name: expressjs-api
          image: sambastraore/my_app:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"  
          livenessProbe:
            httpGet:
              path: test/health/live
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: test/health/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10  
      restartPolicy: Always
