k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expressjs-api
spec:
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
  selector:
    app: expressjs-api
  type: NodePort
